feat: Adds endpoint to kick off discovery
